tests/fixtures/syntax/valid/document_case_minimal.repor
document case {
  title "File creation"
}

case "documented case runs" {
  $ true
  assert {
    exit 0
  }
}
