tests/fixtures/syntax/invalid/comment_splits_case_header.repor
case "x" # comment splits the case header before the opening brace
{
  $ true
  assert {
    exit 0
  }
}
